[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/Bosses.png" type="Texture" id=1]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=3]
[ext_resource path="res://bosses/GrimReaper.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.5, 24 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 24 )

[sub_resource type="CircleShape2D" id=2]
radius = 63.0714

[sub_resource type="Animation" id=4]
resource_name = "Float"
length = 3.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -4 ), Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="GrimReaper" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 64
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="SimonDetector" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SimonDetector"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 144, 0, 48, 64 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 3 )
enemyName = "Grim Reaper"
damage = 4
points = 7000
weakHits = 24
strongHits = 16
hitbox = NodePath("../Hitbox")
deathBehavior = 1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Float"
anims/Float = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="ScytheTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="damaged" from="Enemy" to="." method="_on_Enemy_damaged"]
[connection signal="killed" from="Enemy" to="." method="_on_Enemy_killed" flags=6]
[connection signal="timeout" from="ScytheTimer" to="." method="_on_ScytheTimer_timeout"]
